# amr-blog

./: .gitignore  manage.py  pyproject.toml  requirements.txt
amr_blog/: asgi.py  settings.py  urls.py  wsgi.py
amr_portfolio_website/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_image_name.py  0003_rename_image_name_post_image.py  0004_comment.py
blog/templates/blog/: start_page.html
static/blog/css/: post.css  post_detail.css
templates/: 404.html  base.html
templates/blog/: all_posts.html  post.html  post_detail.html  start_page.html  stored_posts.html
